--- a/wiki/Testing.wiki
+++ b/wiki/Testing.wiki
@@ -26,10 +26,24 @@ Aqui serão apontados os casos de testes para validação do sistema.
 
 ||<b>Pré-condição</b>||Estar na tela de login do sistema ||
 ||<b>Pós-condição</b>||Mensagem de erro do sistema ||
-||<b>Detalhe</b>||O ator não informa login e senha e seleciona ok||
-||<b>Massa de entrada e saída</b>|| Não se aplica||
+||<b>Detalhe</b>||O ator não informa login inválido e senha válida||
+||<b>Massa de entrada e saída</b>||Uma senha válida||
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I01] ||
+||<b>Responsável</b>|| ||
+||<b>Status</b>||Esperando ||
+
+
+
+
+
+||<b>Pré-condição</b>||Estar na tela de login do sistema ||
+||<b>Pós-condição</b>||Mensagem de erro do sistema ||
+||<b>Detalhe</b>||O ator não informa login e senha e seleciona ok<br>O sistema apresenta mensagem "Os campos de login e senha devem ser informados" na tela de login||
+||<b>Massa de entrada e saída</b>|| Não se aplica||
+||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
+||<b>Implementação</b>||Manual ||
+||<b>Iteração</b>||[Iteration I01]||
 ||<b>Responsável</b>|| ||
 ||<b>Status</b>||Esperando ||
