--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -1,11 +1,14 @@
-#summary One-sentence summary of this page.
+#summary Reuniões.
 
 = Introduction =
 
-Add your content here.
+Reuniões semanais da equipe e assuntos abordados nas mesmas.
 
+||Dia da semana||Horário||Local||Participantes||
+||   ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
 
-= Details =
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
