Edited wiki page Meeting through web user interface.

--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -5,9 +5,9 @@
 Reuniões semanais da equipe e assuntos abordados nas mesmas.
 
 ||Dia da semana||Horário||Local||Participantes||
-||   ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
+||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
 
 
 Add your content here.  Format your content with:
