--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -11,3 +11,7 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 ||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
 ||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
 ||   ||||    ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
+
+
+==Assuntos abordados==
+||Dia||||Horário||||LOcal||||Presentes||||Questões apresentadas||||Conclusões||
