Edited wiki page Meeting through web user interface.

--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -8,9 +8,9 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 ==Reuniões semanais==
 
 ||Dia da semana||Horário||Local||Participantes||
-||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
+||   ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||LCC2||||Arnaldo e Cláudia||
+||   ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
 
 ----
 
