Edited wiki page Meeting through web user interface.

--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -7,7 +7,7 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 
 ==Reuniões semanais==
 
-||Dia da semana||Horário||Local||Participantes||
+||Dia da semana||||Horário||||Local||||Participantes||
 ||   ||||    ||||LCC2||||Arnaldo e Cláudia||
 ||   ||||    ||||LCC2||||Arnaldo e Cláudia||
 ||   ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
