--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -15,4 +15,5 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 ----
 
 ==Assuntos abordados==
-||Dia||||Horário||||LOcal||||Presentes||||Questões apresentadas||||Conclusões||
+||Dia||||Horário||||Local||||Presentes||||Questões apresentadas||||Conclusões||
+||Sext 13/08/2010||||16hrs||||Pró-Reitoria||||Arnaldo, Cláudia e Mendes||||Descrição do sistema e suas funcionalidades; Dias e horários fixos das reuniões||||Reuniões estabelecidadas e foi compreendido a demanda geral do sistema||
