--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -8,12 +8,12 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 ==Reuniões semanais==
 
 ||Dia da semana||||Horário||||Local||||Participantes||
-||   ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||LCC2||||Arnaldo e Cláudia||
-||   ||||    ||||LCC2||||Arnaldo,Cláudia e Cliente||
+||Seg||||14hrs||||LCC2||||Arnaldo e Cláudia||
+||Sex||||14hrs||||LCC2||||Arnaldo e Cláudia||
+||Ter||||14hrs||||LCC2||||Arnaldo,Cláudia e Mendes||
 
 ----
 
 ==Assuntos abordados==
 ||Dia||||Horário||||Local||||Presentes||||Questões apresentadas||||Conclusões||
-||Sext 13/08/2010||||16hrs||||Pró-Reitoria||||Arnaldo, Cláudia e Mendes||||Descrição do sistema e suas funcionalidades; Dias e horários fixos das reuniões||||Reuniões estabelecidadas e foi compreendido a demanda geral do sistema||
+||Sext 13/08/2010||||16hrs||||Pró-Reitoria||||Arnaldo, Cláudia e Mendes||||Descrição do sistema e suas funcionalidades; Dias e horários fixos das reuniões.||||Reuniões estabelecidadas e foi compreendido a demanda geral do sistema.||
