Edited wiki page Meeting through web user interface.

--- a/wiki/Meeting.wiki
+++ b/wiki/Meeting.wiki
@@ -17,5 +17,6 @@ Reuniões semanais da equipe e assuntos abordados nas mesmas.
 ==Assuntos abordados==
 ||Dia||||Horário||||Local||||Presentes||||Questões apresentadas||||Conclusões||
 ||Sext 13/08/2010||||16hrs||||Pró-Reitoria||||Arnaldo, Cláudia e Mendes||||Descrição do sistema e suas funcionalidades; Dias e horários fixos das reuniões.||||Reuniões estabelecidadas e foi compreendido a demanda geral do sistema.||
-||Ter 24/08/2010||||14hrs||||Via email||||---||||Definição dos requesitos funcionais e não funcionais||||Requesitos definidos conforme consta na wiki||
-||Sex 27/08/2010||||14hrs||||Via email||||---||||Detalhamento das funcionalidades do sistema||||Compreensão da interface do sistema||
+||Ter 24/08/2010||||14hrs||||Via email||||---||||Definição dos requesitos funcionais e não funcionais||||Requesitos definidos conforme consta na Wiki.||
+||Sex 27/08/2010||||14hrs||||Via email||||---||||Detalhamento das funcionalidades do sistema||||Compreensão da interface do sistema.||
+||Seg 06/09/2010||||14hrs||||LCC2||||Arnaldo e Cláudia||||Planejamento das US, plano de Releases e De Iterações; Divisão das tarefas||||Fechamento das Releases e Iterações. E responsabilidades atribuidas aos integrantes conforme consta na Wiki.||
