--- a/wiki/Competence.wiki
+++ b/wiki/Competence.wiki
@@ -1,13 +1,7 @@
-#summary One-sentence summary of this page.
+#summary Matriz de competência.
 
 = Introduction =
 
-Add your content here.
+Aqui mostramos alguns conhecimentos da aquipe referentes as tecnologias envolvidas no desenvolvimento do sistema.
 
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
