--- a/wiki/Architecture.wiki
+++ b/wiki/Architecture.wiki
@@ -1,13 +1,3 @@
-#summary One-sentence summary of this page.
+#summary Arquitetura do sistema
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[http://code.google.com/p/memorandos/downloads/list]
