--- a/wiki/Architecture.wiki
+++ b/wiki/Architecture.wiki
@@ -1,3 +1,3 @@
 #summary Arquitetura do sistema
 
-[http:memorandos.googlecode.com/files/Arquitetura_do_projeto_Sistema_de_Memorandos_On-line.pdf]
+A documentação encontra-se na página de Downloads.
