--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -9,6 +9,12 @@
 ==US01==
 
 <h2>Sistema de autenticação</h2>
+<h3>
+||<b>Autenticação e controle:</b>
+      - Login com autenticação (se possível, recuperar senha pelo e-mail);
+      - Cadastro de usuário; ||
+</h3>
+
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
 ||US01 ||TA09 ||Criação das _domains classes_ contidas no modelo ||I01 ||Essencial ||2h || ||
