Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -10,8 +10,9 @@
 
 <h2>Sistema de autenticação</h2>
 <h3>
-||<b>Autenticação e controle:</b>
-      - Login com autenticação (se possível, recuperar senha pelo e-mail);
+
+||<b>Autenticação e controle:</b><br>
+      - Login com autenticação (se possível, recuperar senha pelo e-mail);<br>
       - Cadastro de usuário; ||
 </h3>
 
