Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -8,9 +8,11 @@
 
 ==US01==
 
-<h2>Sistema de autenticação</h2>
+<h2>Sistema de autenticação</h2><br>
 
-||<b>Autenticação e controle:</b> ||<br>
+||<b>Autenticação e controle:</b>||
+
+<br>
       - Login com autenticação (se possível, recuperar senha pelo e-mail);<br>
       - Cadastro de usuário;
 
