--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -10,11 +10,10 @@
 
 <h2>Sistema de autenticação</h2><br>
 
-||<b>Autenticação e controle:</b>||
+<b>Autenticação e controle:</b>
 
 <br>
-      - Login com autenticação (se possível, recuperar senha pelo e-mail);<br>
-      - Cadastro de usuário;
+||- Login com autenticação (se possível, recuperar senha pelo e-mail);<br>- Cadastro de usuário;||
 
 
 
