--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -18,17 +18,24 @@
 
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
+||US01 ||TA10 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||1h || ||
+||US01 ||TA10 ||Cadastrar Usuários ||I01 ||Essencial ||1h || ||
 ||US01 ||TA09 ||Criação das _domains classes_ contidas no modelo ||I01 ||Essencial ||2h || ||
-||US01 ||TA10 ||Configurar tipos de usuários ||I01 ||Essencial ||1h || ||
-||US01 ||TA11 ||Configurar tipos de documentos ||I01 ||Essencial ||1h || ||
-||US01 ||TA12 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||
-||US01 ||TA13 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||2h || ||
-||US01 ||TA14 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||
 ||US01 ||TA15 ||Criação da página de login (view)||I01 ||Essencial ||2h || ||
+||US01 ||TA14 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||
 ||US01 ||TA16 ||Tratamento de erros de login||I01 ||Essencial ||2h || ||
+||US01 ||TA13 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||2h || ||
 ||US01 ||TA17 ||Implementar sistema de login/logout do usuário||<b>I02</b> ||Essencial ||2h || ||
-||US01 ||CT03 ||Teste de unidade ||I02 ||Essencial ||2h || ||
-||US01 ||CT04 ||Teste de aceitação ||I02 ||Essencial ||2h || ||
+
+||US01 ||TA12 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||
+
+
+
+
+
+
+
+
 ||TEMPO TOTAL|||||||| ||24h || ||
 <br>
 
