--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -3,4 +3,4 @@
 = Avaliação do projeto WebPós =
 
 
-==Primeira avaliação [Arquitetura http://code.google.com/p/copin-webpos/downloads/A]==
+Primeira avaliação Arquitetura http://code.google.com/p/copin-webpos/downloads/AvaliacaoWebPos.pdf]
