Edited wiki page Avaliacao through web user interface.

--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -3,4 +3,4 @@
 = Avaliação do projeto WebPós =
 
 
-Primeira avaliação [http://code.google.com/p/copin-webpos/downloads/AvaliacaoWebPos.pdf]
+Primeira avaliação [http://code.google.com/p/copin-webpos/downloads/AvaliaçãoWEbPos.pdf]
