--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -3,4 +3,4 @@
 = Avaliação do projeto WebPós =
 
 
-Primeira avaliação [http://code.google.com/p/memorandos/downloads/AvaliaçãoWEbPos.pdf]
+Primeira avaliação [http://memorandos.googlecode.com/files/AvaliaçãoWEbPos.pdf]
