Edited wiki page Avaliacao through web user interface.

--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -3,4 +3,4 @@
 = Avaliação do projeto WebPós =
 
 
-Primeira avaliação [http://memorandos.googlecode.com/files/AvaliaçãoWEbPos.pdf]
+Primeira [avaliação http://memorandos.googlecode.com/files/AvaliaçãoWEbPos.pdf]
