--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -13,7 +13,7 @@
 <b>Autenticação e controle:</b>
 
 <br>
-|| US1 ||- Login com autenticação (se possível, recuperar senha pelo e-mail);<br>- Cadastro de usuário;||3 dias<br>3 dias ||
+|| <b>US1</b> ||<b>- Login com autenticação (se possível, recuperar senha pelo e-mail);</b><br><b>- Cadastro de usuário;</b>||<b>3 dias<br>3 dias</b> ||
 
 
 
@@ -25,7 +25,7 @@
 ||US01 ||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||
 ||US01 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||2h || ||
 ||US01 ||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||2h || ||
-||US01 ||TA08 ||Implementar sistema de login/logout do usuário||<b>I02</b> ||Essencial ||2h || ||
+||US01 ||TA08 ||Implementar sistema de login/logout do usuário||<b>I01</b> ||Essencial ||2h || ||
 ||US01 ||TA09 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||
 ||TEMPO TOTAL|||||||| ||15h || ||
 <br>
