--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -14,7 +14,7 @@ Mostra as iterações do projeto.
 ==Iteração==
 
 ||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
-||I01 ||[UserStory#US01 US01], [UserStory#US02 US02] ||ta01 a ta16 ||re01 ||20/09/2010||04/10/2010||Esperando||
+||I01 ||[UserStory#US01 US01]||ta01 a ta16 ||re01 ||20/09/2010||04/10/2010||Esperando||
 ||I02 ||[UserStory#US02 US02], [UserStory#US03 US03], [UserStory#US04 US04]||ta17 a ta24 ||re01 ||04/10/2010||18/10/2010||Esperando||
 ||I03 ||[UserStory#US04 US04], [UserStory#US05 US05]||ta25 a ta30 ||re01 ||18/10/2010||03/11/2010||Esperando||
 ||I04 ||[UserStory#US05 US05] ||ta31 a ct10 ||re02 ||03/11/2010||17/11/2010||Esperando||
