--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -20,13 +20,14 @@
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
 ||US01 ||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||1h || ||
 ||US01 ||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||1h || ||
-||US01 ||TA03 ||Criação das _domains classes_ contidas no modelo ||I01 ||Essencial ||2h || ||
-||US01 ||TA04 ||Criação da página de login (view)||I01 ||Essencial ||2h || ||
+||US01 ||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||2h || ||
+||US01 ||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||
 ||US01 ||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||
-||US01 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||2h || ||
-||US01 ||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||2h || ||
-||US01 ||TA08 ||Implementar sistema de login/logout do usuário||I01 ||Essencial ||2h || ||
+||US01 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||
+||US01 ||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||4h || ||
+||US01 ||TA08 ||Criar tela Alteração de Senha||I01 ||Essencial ||2h || ||
 ||US01 ||TA09 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||
+
 ||TEMPO TOTAL|||||||| ||15h || ||
 <br>
 
@@ -38,12 +39,13 @@
 
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US02||TA18||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || ||
-||US02||TA19||Implementar modelo de Agendamento de Asência ||I02 ||Essencial ||4h || ||
-||US02||TA20||Implementar controle(_domains classes_) de Agendamento de Asência ||I02 ||Essencial ||4h || ||
 ||US02||TA21||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || ||
 ||US02||TA22||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || ||
 ||US02||TA23||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || ||
+
+||US02||TA18||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || ||
+||US02||TA19||Implementar modelo de Agendamento de Asência ||I02 ||Essencial ||4h || ||
+||US02||TA20||Implementar controle(_domains classes_) de Agendamento de Asência ||I02 ||Essencial ||4h || ||
 ||US02 ||CT05 ||Testes de unidades ||I02 ||Essencial ||2h || ||
 ||US02 ||CT06 ||Teste de aceitação ||I02 ||Essencial ||2h || ||
 ||TEMPO TOTAL|||||||| ||20h || ||
