Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -17,13 +17,13 @@
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||2h || ||
-||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||2h || ||
-||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||4h || ||
-||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||
-||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||
-||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||
-||TA08 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||
+||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||2h || ||Arnaldo ||
+||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||2h || ||Arnaldo ||
+||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||4h || ||Arnaldo ||
+||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia ||
+||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||
+||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||
+||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||
 ||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
@@ -35,14 +35,14 @@
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||TA09 ||Criar tela Alteração de Senha||I01 ||Essencial ||2h || ||
-||TA10||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || ||
-||TA11||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || ||
-||TA12||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || ||
-||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||4h || ||
-||TA13||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || ||
-||TA14||Implementar modelo de Agendamento de Asência ||I02 ||Essencial ||4h || ||
-||TA15||Implementar controle(_domains classes_) de Agendamento de Asência ||I02 ||Essencial ||4h || ||
+||TA09 ||Criar tela Alteração de Senha||I01 ||Essencial ||2h || || ||
+||TA10||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || || ||
+||TA11||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || || ||
+||TA12||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || || ||
+||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I01 ||Desejável ||4h || || ||
+||TA13||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || || ||
+||TA14||Implementar modelo de Agendamento de Asência ||I02 ||Essencial ||4h || || ||
+||TA15||Implementar controle(_domains classes_) de Agendamento de Asência ||I02 ||Essencial ||4h || || ||
 ||TEMPO TOTAL|||||| ||18h || ||
 <br>
 
@@ -53,11 +53,11 @@
 <h2>Tela inicial</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US03||TA24||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I02 ||Essencial ||4h || ||
-||US03||TA25||Implementar controle para Criar memorandos||<b>I03</b> ||Essencial ||8h || ||
-||US03||TA26||Implementar modelo para Criar memorandos||I03 ||Essencial ||8h || ||
-||US03||TA27||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || ||
-||US03||TA28||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || ||
+||US03||TA24||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I02 ||Essencial ||4h || || ||
+||US03||TA25||Implementar controle para Criar memorandos||<b>I03</b> ||Essencial ||8h || || ||
+||US03||TA26||Implementar modelo para Criar memorandos||I03 ||Essencial ||8h || || ||
+||US03||TA27||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || || ||
+||US03||TA28||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || || ||
 ||TEMPO TOTAL|||||||| ||28h || ||
 <br>
 
@@ -68,11 +68,11 @@
 <h2>Tramitação do processo</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US04||TA29||Implementar memorandos: individual ou circular; ||I03 ||Essencial ||4h || ||
-||US04||TA30||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I03 ||Essencial ||4h || ||
-||US04||TA31||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||<b>I04</b> ||Essencial ||8h || ||
-||US04||TA32||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || ||
-||US04||TA33||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || ||
+||US04||TA29||Implementar memorandos: individual ou circular; ||I03 ||Essencial ||4h || || ||
+||US04||TA30||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I03 ||Essencial ||4h || || ||
+||US04||TA31||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||<b>I04</b> ||Essencial ||8h || || ||
+||US04||TA32||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || || ||
+||US04||TA33||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || || ||
 ||TEMPO TOTAL|||||||| ||32h || ||
 <br>
 
@@ -83,9 +83,9 @@
 <h2>Recursos adicionais</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US05||TA34||Implementar Avisos que serão enviados automaticamente por e-mail||<b>I05</b> ||Essencial ||8h || ||
-||US05||TA35||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)||I05 ||Essencial ||8h || ||
-||US05||TA36||Implementar Transferência de Arquivos Anexados||I05 ||Essencial ||12h || ||
+||US05||TA34||Implementar Avisos que serão enviados automaticamente por e-mail||<b>I05</b> ||Essencial ||8h || || ||
+||US05||TA35||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)||I05 ||Essencial ||8h || || ||
+||US05||TA36||Implementar Transferência de Arquivos Anexados||I05 ||Essencial ||12h || || ||
 ||TEMPO TOTAL|||||||| ||28h || ||
 
 
