Edited wiki page Architecture through web user interface.

--- a/wiki/Architecture.wiki
+++ b/wiki/Architecture.wiki
@@ -4,4 +4,4 @@ A documentação encontra-se na página de Downloads.
 
 http://memorandos.googlecode.com/files/Grails_FrameworkPng.png
 
-http://memorandos.googlecode.com/files/
+http://memorandos.googlecode.com/files/Arquitetura do projeto Sistema de Memorandos On-line.pdf
