Edited wiki page Avaliacao through web user interface.

--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -9,3 +9,5 @@
 [http://memorandos.googlecode.com/files/FormularioAvaliacao.pdf Formulário de Avaliação]
 
 ----
+
+http://code.google.com/p/copin-webpos/wiki/Avaliacao Avaliacão em pares
