Edited wiki page Avaliacao through web user interface.

--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -9,5 +9,8 @@
 [http://memorandos.googlecode.com/files/FormularioAvaliacao.pdf Formulário de Avaliação]
 
 ----
+----
+
+Avaliação da nossa arquitetura pelo grupo do projeto WebPós
 
 http://code.google.com/p/copin-webpos/wiki/Avaliacao Avaliacão em pares
