Edited wiki page Avaliacao through web user interface.

--- a/wiki/Avaliacao.wiki
+++ b/wiki/Avaliacao.wiki
@@ -11,6 +11,6 @@
 ----
 ----
 
-Avaliação da nossa arquitetura pelo grupo do projeto WebPós
+= Avaliação da nossa arquitetura pelo grupo do projeto WebPós =
 
 http://code.google.com/p/copin-webpos/wiki/Avaliacao Avaliacão em pares
