--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -17,13 +17,13 @@
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||2h || ||Arnaldo || ||
-||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||2h || ||Arnaldo || ||
-||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||4h || ||Arnaldo || ||
-||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia || ||
-||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia || ||
-||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia || ||
-||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo || ||
+||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
+||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
+||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||4h || ||Arnaldo ||Feito ||
+||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia ||Feito ||
+||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||Feito ||
+||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||Feito ||
+||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||Em andamento ||
 ||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
